# cardano-sounds

./: .gitignore  README.md
apps/: enriching-sound-probability.data
apps/Api.CardanoSounds/: app.py  arweavedeploy.py  audio-files.py  audiofiles.py  dump.rdb  enriching-sound-probability.data  expect-ar-deploy-file.sh  expect-ar-deploy-site.sh  jobs.py  mix-sound.py  mixsound.py  requirements.txt  sounds.py  upload.py  website.py  websites.py
apps/Api.CardanoSounds/app/: arweavedeploy.py  mixsound.py  sounds.py  test.py  upload.py  websites.py
apps/Api.CardanoSounds/db/: base.py  query.py
apps/Api.CardanoSounds/models/: metadata.py  soundprobability.py  transaction.py
apps/Csharp.CardanoSounds/: Csharp.CardanoSounds.sln
apps/Csharp.CardanoSounds/CS.Csharp.CardanoCLI/: Assets.cs  CS.Csharp.CardanoCLI.csproj  CardanoCLI.cs  Examples.cs  Policies.cs  Transactions.cs
apps/Csharp.CardanoSounds/CS.DB.Cosmos/: CS.DB.Cosmos.csproj  Database.cs  Transactions.cs
apps/Csharp.CardanoSounds/CS.MintAndRefund/: App.config  CS.MintAndRefund.csproj  CliLogger.cs  MintAndRefundWorker.cs  MintAndRefundWorker.service  MintWorker.service  Program.cs  metadata-template.json  metadatatemplate.json  nftmetadatatemplate.json  publish&run.sh
apps/Csharp.CardanoSounds/CS.Models/: FullDataTx.cs  FullTransaction.cs  IO.cs  IncommingTransaction.cs  Metadata.cs  TokenValue.cs  Transaction.cs  TxStatus.cs  UtxOs.cs  fullTransaction.ts  incommingTransaction.ts  metadata.ts  tokenValue.ts
apps/Csharp.CardanoSounds/CS.ScanForTxs/: App.config  CS.ScanForTxs.csproj  Program.cs  ScanWorker.cs  ScanWorker.service  Worker.service  index.html  publish&run.sh
apps/Csharp.CardanoSounds/CS.ScanTransactionsForAddress/: Program.cs  (+1 more)
apps/nft-web/: README.md  sketch.js
apps/nft-web_2/: README.md  index.html  sketch.js
apps/scan-wallet/: readme.md
apps/web/: README.md  next.config.js  package-lock.json  package.json  server.js  web.config
player-previews/: previewDict.py
plutus/: README.md  cabal.project  nftMediaLibrary.cabal  result.plutus
plutus/app/: Main.hs
plutus/src/: NftMediaLibrary.hs
scripts/: run-csound-testnet.sh
scripts/ar-permaweb-deploy-shell-scripts/: except-automate-ar-deploy.sh
scripts/cardano-cli-scripts/: create-time-limited-mint-policy.sh  mint-and-sell-token-from-config.sh  test-send-many-tx.sh  test.sh
scripts/python/: dbconnect.py  mix-sound.py  test-ar-blob.py  uploadtoarweave.py  uploadtoarweave_bigfile.py  uploadtoipfs.py
scripts/vm-setup/: README.md  cardano-node-setup.sh  nix-setup.sh  setup-redis.sh
(+235 files in other folders)
