cabal-version:      3.4
name:               nft-media-library
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: on-chain part of smart contract NFT media library for CardanoSounds

-- The package author(s).
author:             dzcodes

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         cardanosounds@gmail.com


-- A copyright notice.
-- copyright:
category:           smartcontract
build-type:         Simple

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files: README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      NftMediaLibrary

  build-depends:        bytestring
                      , cardano-api
                      , flat
                      , plutus-core
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , aeson
                      , plutus-contract

  ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas


executable nft-media-library
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , cardano-ledger-alonzo
                      , plutus-ledger
                      , nft-media-library 
                      , plutus-ledger-api
                      , bytestring
